# CrispCode

./: .env-example  .gitignore  pyproject.toml
runs/20260721-14061784613989-suffix/: events.jsonl
runs/20260721-14071784614028-suffix/: events.jsonl
runs/20260721-14071784614038-suffix/: events.jsonl
runs/20260721-14081784614089-suffix/: events.jsonl
runs/20260721-14081784614098-suffix/: events.jsonl
runs/20260721-14101784614201-suffix/: events.jsonl
runs/20260721-14101784614211-suffix/: events.jsonl
runs/20260721-14131784614395-suffix/: events.jsonl
runs/20260721-14161784614563-suffix/: events.jsonl
runs/20260721-14161784614582-suffix/: events.jsonl
runs/20260721-14171784614646-suffix/: events.jsonl
runs/20260721-14171784614667-suffix/: events.jsonl
runs/20260721-14181784614694-suffix/: events.jsonl
runs/20260721-14201784614810-suffix/: events.jsonl
runs/20260721-14201784614853-suffix/: events.jsonl
runs/20260721-14211784614877-suffix/: events.jsonl
runs/20260721-14241784615080-39f413/: events.jsonl
runs/20260721-14331784615615-e52ba9/: events.jsonl
runs/20260721-14341784615664-4e90a7/: events.jsonl
runs/20260721-14371784615841-69d30d/: events.jsonl
runs/20260721-14381784615907-8ff875/: events.jsonl
runs/20260721-14491784616571-1be4f8/: events.jsonl
runs/20260721-14521784616770-aac2ea/: events.jsonl
runs/20260721-14531784616809-08c5a8/: events.jsonl
runs/20260721-14541784616859-ce206c/: events.jsonl
runs/20260722-00131784650426-82b6e4/: events.jsonl
runs/20260722-00191784650792-4f74dc/: events.jsonl
scripts/: gen_protocol_doc.py
src/crispcode/: main.py
src/crispcode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/crispcode/cli/: __main__.py  main.py
tests/: conftest.py
tests/integration/: test_ping_roundtrip.py
tests/unit/: test.event_bus.py  test_commands_events.py  test_config_env.py  test_context.py  test_envelop.py  test_event_writer.py  test_invocation.py  test_llm_provider.py  test_loop.py  test_read_file.py  test_runner.py  test_tool_registry.py
(+30 files in other folders)
