[project]
name = "crispcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0"
]


[project.scripts]
code        = "crispcode.main:main"
code-core   = "crispcode.core:main"
code-tui    = "crispcode.tui:main"