# ---- 项目元数据与运行时依赖（PEP 621）----
[project]
name = "crispcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]


# 安装后可在 PATH 中执行的入口：`crisp` / `crisp-core` / `crisp-tui`
[project.scripts]
crisp        = "crispcode.cli.main:main"
crisp-core   = "crispcode.core.app:run"
crisp-tui    = "crispcode.tui:main"

# ---- PEP 517：声明如何构建 wheel/sdist ----
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---- Hatch：打 wheel 时从 src 布局收录包 ----
[tool.hatch.build.targets.whell]
packages = ["src/crispcode"]


# ---- 开发期依赖（PEP 735）----
[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>0.23",
    "anthropic>=0.25",
    "openai"
]

# ---- Ruff：统一代码风格 ----
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP"]
ignore = []

# ---- Mypy：严格类型检查 ----
[tool.mypy]
python_version = "3.12"
strict = true 
mypy_path = "src"
explicit_package_bases = true

# ---- Pytest：默认发现 tests/，异步用例自动管理 event loop ----
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"